--- a/index.css
+++ b/index.css
@@ -1,20 +1,52 @@
-body{
-  background-color: #050044;
+body {
+    background-color: #050044;
 }
 
-div{
+div {
     width: 350px;
     background-color: #11097c;
     margin: 0 auto;
     margin-top: 100px;
     padding: 30px 30px;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+    border-radius: 10px;
 
-    }
-img{
+}
+
+img {
     width: 120px;
     height: 120px;
-border-radius: 50%;
-margin: 0 auto;
-display: block;
+    border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+
+}
+
+h1{
+    font-size: 22px;
+    margin-bottom: 0;    
+}
+h2{
+    font-size: 16;
+    color: #00ff04;
+    margin-top: 0;
+}
+p{
+    margin-bottom: 40px;
+}
+a{
+    display: block;
+    line-height: 40px;
+    background-color: #504848;
+    color: white;
+    margin-bottom: 10px;
+    text-decoration: none;
+    border-radius: 6px;
+    transition-duration: 200ms;
+}
+a:hover{
+    background-color: #00ff04;
 
 }
